fix input size. shrinkwrap

--- a/public/scss/components/Subscribe.scss
+++ b/public/scss/components/Subscribe.scss
@@ -37,6 +37,8 @@
       input.select-dropdown {
         font-size: 1.4rem;
         font-weight: 300;
+        height: 4vw;
+        min-height: 45px;
       }
     }
     [type="radio"]:checked + label:after {
